images and youtube video added from firebase and youtube link

--- a/index.html
+++ b/index.html
@@ -70,31 +70,64 @@
                 <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse3.jpg?alt=media&token=0affd299-e1f1-43b3-9a74-6912947ec360" alt="Imagen de la casa 3" loading="lazy">
             </div>
             <div class="gallery-item" data-index="3">
-                <img src="https://drive.google.com/file/d/1ZZHMuhCWkUIiNHAwK2UQ_zGzjtEwDP2F/view" alt="Imagen de la casa 4" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse4.jpg?alt=media&token=e98b22b8-204e-4029-ae0f-2a2bef20db0b" alt="Imagen de la casa 4" loading="lazy">
             </div>
             <div class="gallery-item" data-index="4">
-                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_5" alt="Imagen de la casa 5" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse5.jpg?alt=media&token=38c89988-18f1-4b8f-8a39-112848fc9e80" alt="Imagen de la casa 5" loading="lazy">
             </div>
             <div class="gallery-item" data-index="5">
-                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_6" alt="Imagen de la casa 6" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse6.jpg?alt=media&token=5af91d3c-2019-4ee4-b9ae-e8d7e0815516" alt="Imagen de la casa 6" loading="lazy">
             </div>
             <div class="gallery-item" data-index="6">
-                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_7" alt="Imagen de la casa 7" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse7.jpg?alt=media&token=e0e38c14-557c-4065-83b6-6301e7d22ce6" alt="Imagen de la casa 7" loading="lazy">
             </div>
             <div class="gallery-item" data-index="7">
-                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_8" alt="Imagen de la casa 8" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse8.jpg?alt=media&token=57806ac8-541d-4623-b4f5-98f7a932ada3" alt="Imagen de la casa 8" loading="lazy">
             </div>
             <div class="gallery-item" data-index="8">
-                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_9" alt="Imagen de la casa 9" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse9.jpg?alt=media&token=1f4a6164-ad69-4bcb-8340-660b208b30c6" alt="Imagen de la casa 9" loading="lazy">
             </div>
             <div class="gallery-item" data-index="9">
-                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_10" alt="Imagen de la casa 10" loading="lazy">
+                <img src="hhttps://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse10.jpg?alt=media&token=36a1d925-e368-4111-81e4-49dc52e4e515" alt="Imagen de la casa 10" loading="lazy">
             </div>
             <div class="gallery-item" data-index="10">
-                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_11" alt="Imagen de la casa 11" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse11.jpg?alt=media&token=42343a05-1ae4-47e2-9c3e-ff7ccd240df3" alt="Imagen de la casa 11" loading="lazy">
             </div>
             <div class="gallery-item" data-index="11">
-                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_12" alt="Imagen de la casa 12" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse12.jpg?alt=media&token=0ccc7e77-f2a7-43a4-b015-d0775f307776" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="12">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse13.jpg?alt=media&token=de6352eb-db3a-4f53-887e-d8b76b27c1b3" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="13">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse14.jpg?alt=media&token=c3acf41c-f05d-4639-b503-4ebe9ab1171a" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="14">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse15.jpg?alt=media&token=47581926-d416-491e-92f0-96eec28f52e2" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="15">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse16.jpg?alt=media&token=85b2f35f-9c3d-40fe-940c-672a6a65dd9a" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="16">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse17.jpg?alt=media&token=a1a190bd-5d09-4acc-9636-3ae0bc6acf47" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="17">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse18.jpg?alt=media&token=e8f444c5-db5e-4f21-941d-b0d936e48c19" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="18">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse19.jpg?alt=media&token=261e891a-9a90-4b9d-8e4e-6b5bd68a0d23" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="19">
+                <img src="hhttps://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse20.jpg?alt=media&token=973a64d0-f960-4b21-a5f2-03df1beef4a8" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="20">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse21.jpg?alt=media&token=9dcc5fe9-b32e-48da-9fb7-68262c2eef5b" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="21">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse22.jpg?alt=media&token=73205254-746a-4a6c-8fa0-6de1fabf99e3" alt="Imagen de la casa 12" loading="lazy">
+            </div>
+            <div class="gallery-item" data-index="22">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse23.jpg?alt=media&token=00b1ce0b-f329-4e04-a337-ce07097c596b" alt="Imagen de la casa 12" loading="lazy">
             </div>
         </div>
 
@@ -115,7 +148,7 @@
             <iframe 
                 width="100%" 
                 height="600" 
-                src="https://www.youtube.com/watch?v=yIGDh01ZCZw" 
+                src="https://youtu.be/yIGDh01ZCZw" 
                 title="Tour Virtual de la Casa" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
