--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse9.jpg?alt=media&token=1f4a6164-ad69-4bcb-8340-660b208b30c6" alt="Imagen de la casa 9" loading="lazy">
             </div>
             <div class="gallery-item" data-index="9">
-                <img src="hhttps://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse10.jpg?alt=media&token=36a1d925-e368-4111-81e4-49dc52e4e515" alt="Imagen de la casa 10" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse10.jpg?alt=media&token=36a1d925-e368-4111-81e4-49dc52e4e515" alt="Imagen de la casa 10" loading="lazy">
             </div>
             <div class="gallery-item" data-index="10">
                 <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse11.jpg?alt=media&token=42343a05-1ae4-47e2-9c3e-ff7ccd240df3" alt="Imagen de la casa 11" loading="lazy">
@@ -118,7 +118,7 @@
                 <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse19.jpg?alt=media&token=261e891a-9a90-4b9d-8e4e-6b5bd68a0d23" alt="Imagen de la casa 12" loading="lazy">
             </div>
             <div class="gallery-item" data-index="19">
-                <img src="hhttps://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse20.jpg?alt=media&token=973a64d0-f960-4b21-a5f2-03df1beef4a8" alt="Imagen de la casa 12" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse20.jpg?alt=media&token=973a64d0-f960-4b21-a5f2-03df1beef4a8" alt="Imagen de la casa 12" loading="lazy">
             </div>
             <div class="gallery-item" data-index="20">
                 <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse21.jpg?alt=media&token=9dcc5fe9-b32e-48da-9fb7-68262c2eef5b" alt="Imagen de la casa 12" loading="lazy">
@@ -148,7 +148,7 @@
             <iframe 
                 width="100%" 
                 height="600" 
-                src="https://youtu.be/yIGDh01ZCZw" 
+                src="https://www.youtube.com/watch?v=yIGDh01ZCZw" 
                 title="Tour Virtual de la Casa" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
