--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <iframe 
                 width="100%" 
                 height="600" 
-                src="https://www.youtube.com/watch?v=yIGDh01ZCZw" 
+                src="https://www.youtube.com/embed/yIGDh01ZCZw" 
                 title="Tour Virtual de la Casa" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
