various changes on page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav-links">
             <a href="#inicio" data-en="Home" data-es="Inicio">Home</a>
             <a href="#caracteristicas" data-en="Features" data-es="Características">Features</a>
-            <a href="#galeria" data-en="Gallery" data-es="Galería">Gallery</a>
+            <a href="#gallery" data-en="Gallery" data-es="Galería">Gallery</a>
             <a href="#video" data-en="Video" data-es="Video">Video</a>
             <a href="#contacto" data-en="Contact" data-es="Contacto">Contact</a>
         </div>
