--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-en="Villa San Antonio - Your New Home" data-es="Villa San Antonio - Tu Nuevo Hogar">Villa San Antonio - Your New Home</title>
+    <title data-en="House San Antonio - Your New Home" data-es="Casa San Antonio - Tu Nuevo Hogar">House San Antonio - Your New Home</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">Villa San Antonio</div>
+        <div class="logo">Casa San Antonio</div>
         <div class="nav-links">
             <a href="#inicio" data-en="Home" data-es="Inicio">Home</a>
             <a href="#caracteristicas" data-en="Features" data-es="Características">Features</a>
@@ -228,25 +228,17 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>Villa San Antonio</h3>
+                <h3>Casa San Antonio</h3>
                 <p data-en="Your dream home awaits" data-es="Tu hogar de ensueño te espera">Your dream home awaits</p>
             </div>
             <div class="footer-section">
                 <h3 data-en="Contact" data-es="Contacto">Contact</h3>
-                <p>Email: info@villasanantonio.com</p>
-                <p>Tel: +34 123 456 789</p>
-            </div>
-            <div class="footer-section">
-                <h3 data-en="Follow Us" data-es="Síguenos">Follow Us</h3>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                </div>
-            </div>
+                <p>Email: javiguerrero70@hotmail.com</p>
+                <p>Tel: +506 8393 9110</p>
+            </div>     
         </div>
         <div class="footer-bottom">
-            <p data-en="© 2024 Villa San Antonio. All rights reserved." data-es="© 2024 Villa San Antonio. Todos los derechos reservados.">© 2024 Villa San Antonio. All rights reserved.</p>
+            <p data-en="© 2025 House San Antonio. All rights reserved." data-es="© 2025 Casa San Antonio. Todos los derechos reservados.">© 2025 House San Antonio. All rights reserved.</p>
         </div>
     </footer>
 
